# Football-Honk

./: .gitignore  pyproject.toml
.github/workflows/: refresh_projections.yml
source/honk/: config.py  honk_app.py  refresh.py
source/honk/models/ENG-Premier League_sprm/: parameters.json  smfmodel.pkl
source/honk/models/ENG-Premier League_sprm/ENG-Premier League_sprm.fgm/: environment.txt  model_identification.json
source/honk/models/FRA-Ligue 1_sprm/: parameters.json  smfmodel.pkl
source/honk/models/FRA-Ligue 1_sprm/FRA-Ligue 1_sprm.fgm/: environment.txt  model_identification.json
source/honk/models/GER-Bundesliga_sprm/: parameters.json  smfmodel.pkl
source/honk/models/GER-Bundesliga_sprm/GER-Bundesliga_sprm.fgm/: model_identification.json
source/honk/models/ITA-Serie A_sprm/: parameters.json  smfmodel.pkl
source/honk/models/model_definitions/: static_reg_poi_model.py
source/honk/models/model_train_scripts/: train_scripts.py  train_sprm.py
source/honk/projections/ENG-Premier League/: ENG-Premier League_game_predictions.csv  ENG-Premier League_projection_identification.json
source/honk/projections/FRA-Ligue 1/: FRA-Ligue 1_game_predictions.csv  FRA-Ligue 1_projection_identification.json
source/honk/projections/GER-Bundesliga/: GER-Bundesliga_game_predictions.csv  GER-Bundesliga_projection_identification.json
source/honk/projections/ITA-Serie A/: ITA-Serie A_game_predictions.csv  ITA-Serie A_projection_identification.json
source/honk/projections/projection_build_scripts/: projection.py
(+17 files in other folders)
