# football-honk

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-honk"
version = "1.1.6"
description = "Football-Honk Football/Soocer Prediction Modelling and Projections"
readme = "README.md"
authors = [{name = "Mate Csapo"}]
requires-python = ">=3.10,<3.13"
dependencies = [
    "football-goose @ git+https://github.com/matecsapo/Football-Goose.git",
    "streamlit",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["source"]
include = ["honk*"]

[tool.poetry]
packages = [
    { include = "honk", from = "source" }
]

[tool.setuptools.package-data]
"honk" = ["projections/**/*", "models/**/*"]